--- a/odoo-custom-addons/fibernet/views/sale_view.xml
+++ b/odoo-custom-addons/fibernet/views/sale_view.xml
@@ -544,16 +544,17 @@
                     <sheet>
                         <group col="4"   >
                               <field name="name"  attrs="{'readonly': [('state', '=', 'contacted')]}"/>
+                            <field name="area_id" readonly="1" />
                              <field name="address" attrs="{'readonly': [('state', '=', 'contacted')]}" />
-                             <field name="area_id" readonly="1" />
-                             <field name="email" attrs="{'readonly': [('state', '=', 'contacted')]}" />
+                            <field name="email" attrs="{'readonly': [('state', '=', 'contacted')]}" />
                              <field name="phone" attrs="{'readonly': [('state', '=', 'contacted')]}" />
                             <field name="open_date" readonly="1" />
+                             <field name="user_id" readonly="1" />
                             <field name="contacted_date" readonly="1" />
-                            <field name="user_id" readonly="1" />
+                             <field name="request_ticket_id" readonly="1" />
+                             <field name="expiry_date" readonly="1" />
                             <field name="comment" attrs="{'readonly': [('state', '=', 'contacted')]}" />
-                            <field name="request_ticket_id" readonly="1" />
-                            <field name="is_non_compliance_email_sent"  readonly="1" />
+                             <field name="is_non_compliance_email_sent"  readonly="1" />
                             <field name="is_non_compliance_email_sent_date"  readonly="1" />
                         </group>
                     </sheet>
@@ -576,8 +577,9 @@
                              <field name="area_id" options="{'no_open': True, 'no_create': True}"  />
                              <field name="email" />
                              <field name="phone" />
-                      <field name="open_date" readonly="1"/>
-                            <field name="contacted_date" readonly="1" />
+                      <field name="open_date" />
+                            <field name="contacted_date" />
+                      <field name="expiry_date"  />
                                 <field name="user_id" />
                              <field name="state" />
                       <field name="comment" />
