--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -50,7 +50,7 @@
                         <button name="%(action_disapproval_reason)d" type="action" states="confirm" string="Dis-Approve" groups="kin_loading.group_depot_manager" />
                         <button name="action_cancel" states="confirm,approve" type="object" string="Cancel" confirm="Are you sure you want to Cancel the Loading Programme?"/>
                         <button name="action_draft" states="confirm,approve,cancel" type="object" string="Reset to Draft" confirm="Are you sure you want to Reset the Loading Programme?" />
-                        <button name="%(action_loading_programme_wizard)d" type="action" states="approve" string="Export Loading Programme in Excel"  class="oe_highlight" groups="kin_loading.group_depot_officer,kin_loading.group_depot_manager" />
+                        <button name="btn_loading_programme_excel_export"  type="object" states="approve" string="Export Loading Programme in Excel"  class="oe_highlight" groups="kin_loading.group_depot_officer,kin_loading.group_depot_manager" />
                         <field name="state" widget="statusbar"  />
                     </header>
                     <sheet>
@@ -634,8 +634,8 @@
                             <field name="waybill_no" />
                             <field name="truck_no" />
                             <field name="ticket_date" />
-                            <field name="dpr_info_id" domain="[('customer_id','=',partner_id)]" options="{'no_open':True,'no_create':True}"  />
-                            <field name="dpr_status" readonly="1"  force_save="1" />
+                            <field name="dpr_info_id" context="{'loading_programme_date':parent.programme_date}" domain="[('customer_id','=',partner_id)]" options="{'no_open':True,'no_create':True}"  />
+                            <field name="dpr_status"  />
                             <field name="dpr_no" readonly="1"   force_save="1"/>
                             <field name="location_addr_id" />
                               <field name="dpr_expiry_date" readonly="1" force_save="1"  />
