--- a/odoo-custom-addons/kin_loading/views/loading_view.xml
+++ b/odoo-custom-addons/kin_loading/views/loading_view.xml
@@ -266,17 +266,18 @@
                      </group>
                  </group>
 
-
-
                 <page name="order_lines" position="after" >
                     <page name="atl" string="Authority to Load"  attrs="{'invisible': [('state', 'not in', ['atl_awaiting_approval','atl_approved','sale'])], 'readonly': [('state', 'in', ['atl_approved','cancel'])]}" >
                         <group col="4" >
+                            <field name="atl_id" readonly="1" />
+                            <field name="atl_date" readonly="1" />
                             <field name="atl_partner_id" options = "{'no_open':True,'no_create':True}" />
                             <field name="atl_product_id" options = "{'no_open':True,'no_create':True}" />
                             <field name="atl_qty" />
                             <field name="atl_payment_mode_id"  options = "{'no_open':True,'no_create':True}" attrs="{'readonly': [('state', 'in', ['atl_approved','cancel'])]}" />
                             <field name="atl_depot_id" options = "{'no_open':True,'no_create':True}"  attrs="{'readonly': [('state', 'in', ['atl_approved','cancel'])]}"  />
                             <field name="atl_jetty_id" options = "{'no_open':True,'no_create':True}"  attrs="{'readonly': [('state', 'in', ['atl_approved','cancel'])]}"  />
+                             <field name="atl_approved_user_id" readonly="1" />
                         </group>
                     </page>
                 </page>
@@ -572,7 +573,7 @@
                     <button name="action_confirm" states="draft" string="Mark as Todo" type="object" class="oe_highlight" groups="base.group_user"/>
 <!--                    <button name="action_assign" states="confirmed,waiting" string="Check Availability and Reserve" type="object" class="oe_highlight" groups="base.group_user"/>-->
 <!--                    <button name="force_assign" states="confirmed,waiting,partially_available" string="Force Availability" type="object" groups="kin_stock.group_force_availability_button"/>-->
-                    <button name="button_validate" states="draft,partially_available,assigned" string="Validate" groups="stock.group_stock_user" type="object" class="oe_highlight"/>
+                    <button name="button_validate" states="draft,waiting,confirmed,assigned" string="Validate" groups="stock.group_stock_user" type="object" class="oe_highlight"/>
 <!--                    <button name="do_print_picking" string="Print" groups="stock.group_stock_user" type="object" attrs="{'invisible': [('state', 'not in', ('assigned', 'partially_available'))]}"/>-->
                     <button name="btn_print_loading_ticket" string="Print Loading Ticket"  class="oe_highlight" attrs="{'invisible': [('state', 'in', ('draft','done','cancel'))]}" type="object" groups="kin_loading.group_show_ticket_print_button"  />
                      <button name="btn_print_waybill" string="Print Waybill" states="done" class="oe_highlight" type="object" groups="kin_loading.group_show_waybill_print_button"  />
@@ -584,7 +585,7 @@
 <!--                    <button name="do_prepare_partial" attrs="{'invisible': ['|', ('launch_pack_operations', '=', True), '|', ('state', 'not in', ('assigned', 'partially_available')), ('pack_operation_ids', '!=', [])]}"-->
 <!--                            string="Reset Operations" type="object"/>-->
 <!--                    <field name="launch_pack_operations" invisible="1"/>-->
-                    <field name="state" widget="statusbar" statusbar_visible="draft,confirmed,partially_available,assigned,done" statusbar_colors='{"shipping_except":"red","invoice_except":"red","waiting_date":"blue"}'/>
+                    <field name="state" widget="statusbar" statusbar_visible="draft,waiting,confirmed,assigned,done" statusbar_colors='{"shipping_except":"red","invoice_except":"red","waiting_date":"blue"}'/>
                 </header>
                 <sheet>
 
@@ -642,15 +643,11 @@
                             <field name="location_addr_id" />
                               <field name="dpr_expiry_date" readonly="1" force_save="1"  />
                             <field name="customer_address" readonly="1" />
-                            <field name="valid_driver_license" />
                             <field name="receiving_station_address" invisible="1" />
                             <field name="receiving_station_management" />
                             <field name="receiving_manager_phone" />
                             <field name="loader_id" />
                             <field name="loaded_date" />
-                            <field name="seal_no_top" />
-                            <field name="seal_no_bottom" />
-                            <field name="is_water_content" />
                             <field name="driver_name"  />
                             <field name="truck_driver_phone" />
                               <field name="receiving_officer" />
@@ -849,15 +846,11 @@
                             <field name="location_addr_id" />
                              <field name="dpr_expiry_date" readonly="1" force_save="1"  />
                             <field name="customer_address" readonly="1" />
-                            <field name="valid_driver_license" />
                             <field name="receiving_station_address" invisible="1" />
                             <field name="receiving_station_management" />
                             <field name="receiving_manager_phone" />
                             <field name="loader_id" />
                             <field name="loaded_date" />
-                            <field name="seal_no_top" />
-                            <field name="seal_no_bottom" />
-                            <field name="is_water_content" />
                             <field name="driver_name"  />
                             <field name="truck_driver_phone" />
                             <field name="receiving_officer" />
@@ -1170,15 +1163,11 @@
                             <field name="location_addr_id" />
                               <field name="dpr_expiry_date" readonly="1" force_save="1"  />
                             <field name="customer_address" readonly="1" />
-                            <field name="valid_driver_license" />
                             <field name="receiving_station_address" invisible="1" />
                             <field name="receiving_station_management" />
                             <field name="receiving_manager_phone" />
                             <field name="loader_id" />
                             <field name="loaded_date" />
-                            <field name="seal_no_top" />
-                            <field name="seal_no_bottom" />
-                            <field name="is_water_content" />
                             <field name="driver_name"  />
                             <field name="truck_driver_phone" />
                               <field name="receiving_officer" />
