--- a/odoo-custom-addons/kin_stock/views/stock_view.xml
+++ b/odoo-custom-addons/kin_stock/views/stock_view.xml
@@ -154,8 +154,20 @@
                 <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']" position="attributes" >
                      <attribute name="options">{'no_create': True, 'no_open': True}</attribute>
                 </xpath>
+            </field>
+        </record>
 
-
+        <record id="view_move_form_extend" model="ir.ui.view">
+            <field name="name">stock.move.form.extend</field>
+            <field name="model">stock.move</field>
+            <field eval="1" name="priority"/>
+             <field name="inherit_id" ref="stock.view_move_form" />
+            <field name="arch" type="xml">
+                <group name="origin_grp" position="after" >
+                    <group string="Others" >
+                         <field name="sale_line_id" readonly="1" />
+                    </group>
+                </group>
             </field>
         </record>
 
