--- a/odoo-custom-addons/heyden/report/report_deliveryslip.xml
+++ b/odoo-custom-addons/heyden/report/report_deliveryslip.xml
@@ -216,25 +216,25 @@
                                     <span/>
                                 </td>
                                 <td class="border border-dark">
-                                   <span t-field="o.comp1_vol"/>
+                                   <span t-if="o.comp1_vol != 0" t-field="o.comp1_vol"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp2_vol"/>
+                                    <span t-if="o.comp2_vol != 0"  t-field="o.comp2_vol"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp3_vol"/>
+                                    <span t-if="o.comp3_vol != 0.0" t-field="o.comp3_vol"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp4_vol"/>
+                                    <span t-if="o.comp4_vol != 0"  t-field="o.comp4_vol"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp5_vol"/>
+                                    <span  t-if="o.comp5_vol != 0" t-field="o.comp5_vol"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp6_vol"/>
+                                    <span  t-if="o.comp6_vol != 0" t-field="o.comp6_vol"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp7_vol"/>
+                                    <span  t-if="o.comp7_vol != 0" t-field="o.comp7_vol"/>
                                 </td>
                             </tr>
 
@@ -246,25 +246,25 @@
                                     <span/>
                                 </td>
                                 <td class="border border-dark">
-                                   <span t-field="o.comp1_receipt"/>
+                                   <span  t-if="o.comp1_receipt != 0" t-field="o.comp1_receipt"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp2_receipt"/>
+                                    <span t-if="o.comp2_receipt != 0" t-field="o.comp2_receipt"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp3_receipt"/>
+                                    <span t-if="o.comp3_receipt != 0" t-field="o.comp3_receipt"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp4_receipt"/>
+                                    <span t-if="o.comp4_receipt != 0" t-field="o.comp4_receipt"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp5_receipt"/>
+                                    <span t-if="o.comp5_receipt != 0" t-field="o.comp5_receipt"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp6_receipt"/>
+                                    <span t-if="o.comp6_receipt != 0" t-field="o.comp6_receipt"/>
                                 </td>
                                 <td class="border border-dark">
-                                    <span t-field="o.comp7_receipt"/>
+                                    <span t-if="o.comp7_receipt != 0" t-field="o.comp7_receipt"/>
                                 </td>
                             </tr>
                             <tr>
